<resources>

    <!--App Title-->
    <string name="app_name">Smart Poultry Farm</string>

    <!--Title-->
    <string name="network_Checking">Checking network…</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="humidity">Humidity</string>
    <string name="airQuality">Air Quality</string>
    <string name="waterHeight">Water Height</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthyForSensitiveGroups">Unhealthy for Sensitive Groups</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="veryUnhealthy">Very Unhealthy</string>
    <string name="hazardous">Hazardous</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="lightOne">Light 1</string>
    <string name="lightTwo">Light 2</string>
    <string name="lightThree">Light 3</string>
    <string name="lightFour">Light 4</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="contactPermission">Contacts Permission</string>
    <string name="smsPermission">SMS Permission</string>
    <string name="storagePermission">Storage Permission</string>
    <string name="unknown">Unknown</string>
    <string name="numberNotFound">No number found</string>
    <string name="rememberMe">Remember Me</string>
    <string name="processing">Processing…</string>
    <string name="shareAPkVia">Share app via…</string>

    <!--Navigation Drawer-->
    <string name="nav_addController">Add Controller</string>
    <string name="nav_addContact">Add Contact</string>
    <string name="nav_contacts">Phone Contacts</string>
    <string name="nav_emergencyContact">Emergency Contact</string>
    <string name="nav_share">Share</string>
    <string name="nav_logout">Logout</string>

    <!--Symbol-->
    <string name="temperatureUnit">\u00B0F</string>
    <string name="nullSymbol">Ø</string>
    <string name="humidityUnit">%</string>
    <string name="airQualityUnit">μg/m³</string>
    <string name="waterHeightUnit">cm</string>
    <string name="zero">0</string>

    <!--Hints-->
    <string name="id_Hint">Channel ID</string>
    <string name="key_Hint">Key</string>
    <string name="readKey_Hint">Read Key</string>
    <string name="writeKey_Hint">Write Key</string>

    <!--Button Title-->
    <string name="retry">Retry</string>
    <string name="forbid">Forbid</string>
    <string name="allow">Allow Now</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="addNew">Add New</string>
    <string name="remove">Remove</string>
    <string name="login">Login</string>
    <string name="openSettings">Open Settings</string>

    <!--Message-->
    <string name="network_Error">Network error. Please retry when network is stable.</string>
    <string name="allowNotificationMessage">&quot;Patient Monitoring&quot; requires Notification permission, do you allow?</string>
    <string name="allowAutoStartupMessage">Please allow Auto Startup to always run in the background. Our app runs in background else our services can\'t be accessed.</string>
    <string name="contactPermissionMessage">Contacts Permission is necessary for getting all emergency contact from your device</string>
    <string name="smsPermissionMessage">SMS Permission is necessary for sending message to emergency contact</string>
    <string name="storagePermissionMessage">Storage Permission is needed for sharing app</string>
    <string name="noEmergencyContact">Sorry, you have no emergency contact, please add new.</string>
    <string name="phone_Error">Please! Enter your mobile number</string>
    <string name="channelId_Error">Please! Enter channel id</string>
    <string name="validChannelId_Error">Please! Enter valid channel id</string>
    <string name="key_Error">Please! Enter key</string>
    <string name="validKeyError">Please! Enter valid key</string>
    <string name="dataNotExist">Please! check your channel id &amp; key</string>

</resources>
