<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--Field-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_Small"
        android:background="@drawable/shape_card"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_Extra_Large">

        <!--Field Icon-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/field.icon"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/margin_Large"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <!--Field Content-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Field Label-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/field.label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_Extra_Small"
                android:textColor="@color/text_Color_Accent"
                android:textSize="@dimen/text_Size_Small"
                android:textStyle="bold"
                tools:text="@string/temperature" />

            <!--Field Details-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Field Current Value-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/field.cur.value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="@dimen/margin_Small"
                    android:textColor="@color/text_Color_Dark"
                    android:textSize="@dimen/text_Size_Large"
                    tools:text="@string/zero" />

                <!--Field Unit-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/field.unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="@dimen/margin_Extra_Small"
                    android:text="@string/temperatureUnit"
                    android:textColor="@color/text_Color_Dark"
                    android:textSize="@dimen/text_Size_Small" />

                <!--Field Status-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/field.status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:gravity="end"
                    android:textColor="@color/text_Color_Dark"
                    android:textSize="@dimen/text_Size_Small"
                    tools:text="@string/normal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Field Previous Value-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/field.prev.value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/margin_Small"
                android:alpha=".75"
                android:textColor="@color/text_Color_Dark"
                android:textSize="@dimen/text_Size_Extra_Small"
                tools:text="0 F" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
