<?xml version="1.0" encoding="utf-8"?>
<com.rs.smartpoultryfarm.widget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.AddControllerFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_Large"
        android:layout_centerInParent="true"
        android:background="@color/activity_Background"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="@dimen/padding_Large"
            android:paddingEnd="@dimen/padding_Large">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back.Btn"
                android:layout_width="@dimen/icon_Size_Medium"
                android:layout_height="@dimen/icon_Size_Medium"
                android:layout_gravity="start|center_vertical"
                android:adjustViewBounds="true"
                android:padding="@dimen/_6sdp"
                app:srcCompat="@drawable/ic_arrow_left" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/icon_Size_Large"
                android:layout_marginEnd="@dimen/icon_Size_Large"
                android:text="@string/addController"
                android:textAlignment="center"
                android:textColor="@color/text_Color_Dark"
                android:textSize="@dimen/text_Size_Default"
                android:textStyle="bold" />

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Medium"
            android:layout_marginStart="@dimen/margin_Extra_Large"
            android:layout_marginEnd="@dimen/margin_Extra_Large"
            android:layout_marginBottom="@dimen/margin_Large"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_Large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_Hint"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="7"
                    android:textColor="@color/text_Color_Dark"
                    android:textColorHint="@color/text_Hint_Color"
                    android:textSize="@dimen/text_Size_Medium"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_Large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/readKey.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/readKey_Hint"
                    android:inputType="textCapCharacters"
                    android:maxLength="16"
                    android:textColor="@color/text_Color_Dark"
                    android:textColorHint="@color/text_Hint_Color"
                    android:textSize="@dimen/text_Size_Medium"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_Extra_Large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/writeKey.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writeKey_Hint"
                    android:inputType="textCapCharacters"
                    android:maxLength="16"
                    android:textColor="@color/text_Color_Dark"
                    android:textColorHint="@color/text_Hint_Color"
                    android:textSize="@dimen/text_Size_Medium"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action.Btn"
                android:layout_width="wrap_content"
                android:minWidth="@dimen/_96sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_Medium"
                android:paddingStart="@dimen/padding_Large"
                android:paddingEnd="@dimen/padding_Large"
                android:background="@drawable/shape_button_add"
                android:textAllCaps="false"
                android:text="@string/add"
                android:textColor="@color/text_Color_Light"
                android:textSize="@dimen/text_Size_Medium"
                android:stateListAnimator="@null"
                android:elevation="0dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.rs.smartpoultryfarm.widget.ArcView>